/**
 * # Delete Live Hash
 * Dissociate a specific live hash from a specified account.
 *
 * > Important
 * >> This transaction is obsolete and not supported.<br/>
 * >> Any transaction of this type that is submitted SHALL fail with a `PRE_CHECK` result
 * >> of `NOT_SUPPORTED`.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package proto;

// SPDX-License-Identifier: Apache-2.0
option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.token">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";

/**
 * Delete a specific live hash associated to a given account.
 *
 * This transaction MUST be signed by either the key of the associated account,
 * or at least one of the keys listed in the live hash.
 *
 * ### Block Stream Effects
 * None
 */
message CryptoDeleteLiveHashTransactionBody {
    /**
     * An account associated to a live hash.
     */
    AccountID accountOfLiveHash = 1;

    /**
     * The SHA-384 value of a specific live hash to delete.
     */
    bytes liveHashToDelete = 2;
}
